--- a/res/layout/confirm_ddt.xml
+++ b/res/layout/confirm_ddt.xml
@@ -56,14 +56,14 @@
                 android:id="@+id/confirm_ddt_foreman_label"
                 android:layout_width="0dp"
                 android:layout_weight="0.7"
-                android:text="Foreman"
+                android:text="@string/foreman"
                 android:textSize="24sp" />
 
             <TextView
                 android:id="@+id/confirm_ddt_foreman_value"
                 android:layout_width="0dp"
                 android:layout_weight="0.3"
-                android:text=" ? "
+                android:text="@string/emptyValue"
                 android:textSize="24sp" />
         </TableRow>
 
@@ -77,14 +77,14 @@
                 android:id="@+id/confirm_ddt_sprayer_label"
                 android:layout_width="0dp"
                 android:layout_weight="0.7"
-                android:text="Sprayer"
+                android:text="@string/sprayer"
                 android:textSize="24sp" />
 
             <TextView
                 android:id="@+id/confirm_ddt_sprayer_value"
                 android:layout_width="0dp"
                 android:layout_weight="0.3"
-                android:text=" ? "
+                android:text="@string/emptyValue"
                 android:textSize="24sp" />
         </TableRow>
 
@@ -98,14 +98,14 @@
                 android:id="@+id/confirm_ddt_rooms_sprayed_label"
                 android:layout_width="0dp"
                 android:layout_weight="0.7"
-                android:text="Rooms Sprayed"
+                android:text="@string/roomsSprayed"
                 android:textSize="24sp" />
 
             <TextView
                 android:id="@+id/confirm_ddt_rooms_sprayed_value"
                 android:layout_width="0dp"
                 android:layout_weight="0.3"
-                android:text=" ? "
+                android:text="@string/emptyValue"
                 android:textSize="24sp" />
         </TableRow>
 
@@ -119,14 +119,14 @@
                 android:id="@+id/confirm_ddt_shelters_sprayed_label"
                 android:layout_width="0dp"
                 android:layout_weight="0.7"
-                android:text="Shelters Sprayed"
+                android:text="@string/sheltersSprayed"
                 android:textSize="24sp" />
 
             <TextView
                 android:id="@+id/confirm_ddt_shelters_sprayed_value"
                 android:layout_width="0dp"
                 android:layout_weight="0.3"
-                android:text=" ? "
+                android:text="@string/emptyValue"
                 android:textSize="24sp" />
         </TableRow>
 
@@ -140,14 +140,14 @@
                 android:id="@+id/confirm_ddt_can_refilled_label"
                 android:layout_width="0dp"
                 android:layout_weight="0.7"
-                android:text="Refill can"
+                android:text="@string/refillCan"
                 android:textSize="24sp" />
 
             <TextView
                 android:id="@+id/confirm_ddt_can_refilled_value"
                 android:layout_width="0dp"
                 android:layout_weight="0.3"
-                android:text=" ? "
+                android:text="@string/emptyValue"
                 android:textSize="24sp" />
         </TableRow>
     </TableLayout>
