--- a/res/layout/sprayer_form.xml
+++ b/res/layout/sprayer_form.xml
@@ -45,7 +45,7 @@
                 android:id="@+id/sprayer_form_textview_roomsSprayed"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/roomsSprayed"
+                android:text="@string/roomsSprayedLabel"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textSize="24sp" />
 
@@ -76,7 +76,7 @@
                 android:id="@+id/sprayer_form_textview_sheltersSprayed"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/sheltersSprayed"
+                android:text="@string/sheltersSprayedLabel"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textSize="24sp" />
 
@@ -104,7 +104,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="12dp"
                 android:layout_marginRight="12dp"
-                android:text="@string/canRefilled"
+                android:text="@string/refillCanLabel"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textSize="24sp" />
 
